--- a/new/test/home.html
+++ b/new/test/home.html
@@ -22,10 +22,10 @@
                 <option value="by">🇧🇾</option>
             </select>
         </div>
-        <a class="lng-about_us" href="#about">About us</a>
-        <a class="lng-projects" href="#projects">Projects</a>
-        <a class="lng-team" href="#team">Team</a>
-        <a class="lng-contacts" href="#contacts">Contacts</a>
+        <a class="lng-about_us" href="#about"></a>
+        <a class="lng-projects" href="#projects"></a>
+        <a class="lng-team" href="#team"></a>
+        <a class="lng-contacts" href="#contacts"></a>
     </header>
     <div class="blocks">
         <script src="src/js/projectsInfo/stormInfo.js"></script>
@@ -54,7 +54,7 @@
                         <img class="listpic" src="src/img/Logo/Reverse_Launcher.png"/>
                         <div class="listinfo">
                             <div class="listname" id="launcher_version">Reverse Launcher | App |</div>
-                            <div class="lng-launcher_desc">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas doloribus asperiores accusamus nulla? Officiis delectus aut enim soluta hic libero nobis quae nemo excepturi, corporis numquam. In inventore minima dolorem?</div>
+                            <div class="lng-launcher_desc"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/Kira_is_god'">arrow_forward_ios</div>
