--- a/index.html
+++ b/index.html
@@ -1,87 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oops...</title>
-  <link rel="stylesheet" href="new/src/style/tools/default.css">
-  <link rel="stylesheet" href="new/src/style/tools/header.css">
-  <link rel="stylesheet" href="new/src/style/tools/scrollbar.css">
-  <link rel="stylesheet" href="new/src/style/tools/footer.css">
+  <title class="index-title">Oops...</title>
+  <link rel="stylesheet" href="new/src/style/style.css">
+  <link rel="stylesheet" href="new/src/style/fonts.css">
 </head>
 <body>
-  <header>
-    <ul class="nav-bar-b">
-        <img src="new/src/img/ReverseEntertainment_Smalllogo_VK.png" alt="" width="64px" height="64px">
-        <li>
-           <a class="nav-btn" href="new/home.html">home</a>
-        </li>
-        <li>
-            <a class="nav-btn" href="new/news.html">news</a>
-        </li>
-        <li>
-            <a class="nav-btn-s-rg" href="new/products/reversegram.html">reverseGram</a>
-        </li>
-    </ul>
-  </header>
-    <div class="notification">
-      <h1>Oops...</h1>
-      <p>This page is no longer relevant.<br>
-         Please go to the new version of our site!</p>
-      <a class="btn" href="new/home.html">Go!</a>
+    <header>
+        <div class="lang">
+            <select class="change-lang">
+                <option value="en" selected>🇺🇸</option>
+                <option value="ru">🇷🇺</option>
+                <option value="ua">🇺🇦</option>
+                <option value="cz">🇨🇿</option>
+                <option value="by">🇧🇾</option>
+            </select>
+        </div>
+        <a class="lng-about_us" href="new/home.html#about"></a>
+        <a class="lng-projects" href="new/home.html#projects"></a>
+        <a class="lng-team" href="new/home.html#team"></a>
+        <a class="lng-contacts" href="new/home.html#contacts"></a>
+    </header>
+    <div class="index-error">
+        <h1 class="lng-error"></h1>
+        <p class="lng-text_error">This page is no longer relevant.<br>
+            Please go to the new version of our site!</p>
+        <a class="btn" href="new/home.html">Go!</a>
     </div>
+    <!-- scripts -->
+        <script src="new/src/js/websiteInfo.js"></script>
+        <script src="new/src/js/strings.js"></script>
+        <script src="new/src/js/app.js"></script>
+    <!-- scripts -->
 </body>
-<footer>
-  <div class="foot">
-      <div class="re-footer">
-          <div class="social">
-              <h1 class="footer-h">
-                  social
-              </h1>
-              <h2>
-                  <a class="footer-link-tw" href="https://twitter.com/reverseentoffi">
-                      twitter
-                  </a>
-              </h2>
-              <h2>
-                  <a class="footer-link-yt" href="https://www.youtube.com/@reversegamestudio">
-                      youtube
-                  </a>
-              </h2>
-              <h2>
-                  <a class="footer-link-vk" href="https://vk.com/reverseentofficial">
-                      vk
-                  </a>
-              </h2>
-              
-          </div>
-          <div class="other">
-              <h1 class="footer-h">
-                  pages
-              </h1>
-              <h2>
-                  <a class="footer-link" href="home.html">
-                      home
-                  </a>
-              </h2>
-              <h2>
-                  <a class="footer-link" href="notifications/development.html">
-                      news
-                  </a>
-              </h2>
-              <h2>
-                  <a class="footer-link" href="../index.html">
-                      old site
-                  </a>
-              </h2>
-          </div>
-      </div>
-      <div class="web_info">
-          <h3>
-              version: 2.1.0-beta
-          </h3>
-      </div>
-  </div>
-</footer>
 </html>
