geniy card update

--- a/new/home.html
+++ b/new/home.html
@@ -78,7 +78,7 @@
                         </div>
                     </a>
                     <a>
-                        <img class="listpic" src="src/img/TeamMembers/geniy.jpg"/>
+                        <img class="listpic" src="https://avatars.githubusercontent.com/u/98812457?v=4"/>
                         <div class="listinfo">
                             <div class="listname">geniy</div>
                             <div class="listdesc">@Kira_is_god | TG</div><div class="lng-teamdesc-geniy"></div>
