--- a/new/home.html
+++ b/new/home.html
@@ -98,7 +98,7 @@
                         </div>
                     </a>
                     <a>
-                        <img class="listpic" src="src/img/TeamMembers/steven56.jpg"/>
+                        <img class="listpic" src="https://avatars.githubusercontent.com/u/133568586?v=4"/>
                         <div class="listinfo">
                             <div class="listname">steven56</div>
                             <div class="listdesc">@steven56 | VK</div><div class="lng-teamdesc-steven56"></div>
@@ -108,7 +108,7 @@
                         </div>
                     </a>
                     <a>
-                        <img class="listpic" src="src/img/TeamMembers/bebreef.jpg"/>
+                        <img class="listpic" src="https://avatars.githubusercontent.com/u/141333181?v=4"/>
                         <div class="listinfo">
                             <div class="listname">bebreef</div>
                             <div class="listdesc">@bebreef | TG & VK</div><div class="lng-teamdesc-bebreef"></div>
