--- a/new/home.html
+++ b/new/home.html
@@ -41,23 +41,13 @@
                 <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ projects.txt </div>
                 <div class="list">
                     <a>
-                        <img class="listpic" src="src/img/Logo/TheOceanShore_MiniLogo.png"/>
+                        <img class="listpic" src="src/img/Logo/Img.png"/>
                         <div class="listinfo">
-                            <div class="listname" id="storm_version">The Ocean Shore | Game |</div>
-                            <div class="lng-storm_desc"></div>
+                            <div class="listname" id="storm_version">??? | Game |</div>
+                            <div class="lng-shangii"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://github.com/bublickkk/StormImg/releases/download/stormapp/Storm.zip'">arrow_forward_ios</div>
-                        </div>
-                    </a>
-                    <a>
-                        <img class="listpic" src="src/img/Logo/Reverse_Launcher.png"/>
-                        <div class="listinfo">
-                            <div class="listname" id="launcher_version">Reverse Launcher | App |</div>
-                            <div class="lng-launcher_desc"></div>
-                        </div>
-                        <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/Kira_is_god'">arrow_forward_ios</div>
                         </div>
                     </a>
                 </div>
