Update secret game

--- a/new/home.html
+++ b/new/home.html
@@ -41,7 +41,7 @@
                 <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ projects.txt </div>
                 <div class="list">
                     <a>
-                        <img class="listpic" src="src/img/Logo/Img.png"/>
+                        <img class="listpic" src="src/img/Logo/3_ v2.png"/>
                         <div class="listinfo">
                             <div class="listname" id="storm_version">??? | Game |</div>
                             <div class="lng-shangii"></div>
