--- a/new/home.html
+++ b/new/home.html
@@ -32,13 +32,13 @@
         <script src="src/js/projectsInfo/launcherInfo.js"></script>
         <div class="about" id="about">
             <div class="terminal">
-                <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ about_us.txt </div>
+                <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ about_us.txt </div>
                 <p class="lng-about_us_desc"></p>
             </div>
         </div>
         <div class="projects" id="projects">
             <div class="terminal">
-                <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ projects.txt </div>
+                <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ projects.txt </div>
                 <div class="list">
                     <a>
                         <img class="listpic" src="src/img/Logo/3_ v2.png"/>
@@ -55,7 +55,7 @@
         </div>
         <div class="team" id="team">
             <div class="terminal">
-                <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ team.txt </div>
+                <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ team.txt </div>
                 <div class="list">
                     <a>
                         <img class="listpic" src="https://avatars.githubusercontent.com/u/72266338?v=4"/>
@@ -112,9 +112,8 @@
         </div>
         <div class="contacts" id="contacts">
             <div class="terminal">
-                <div class="terminal-text"> <span style="color: greenyellow">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ contacts.txt </div>
+                <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ contacts.txt </div>
                 <p class="text-p">email:<a href="mailto:reverseent@proton.me">reverseent@proton.me</a></p>
-                <p class="text-p">Telegram:<a href="https://t.me/reverseofficial">@reverseentofficial</a></p>
                 <p class="text-p">VK:<a href="https://vk.com/reverseentofficial">@reverseentofficial</a></p>
                 <p class="text-p">Twitter:<a href="https://twitter.com/reverseentoffi">@reverseentoffi</a></p>
                 <p class="text-p">YouTube:<a href="https://www.youtube.com/@reversegamestudio">@reversegamestudio</a></p>
