--- a/new/home.html
+++ b/new/home.html
@@ -33,7 +33,9 @@
         <div class="about" id="about">
             <div class="terminal">
                 <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ about_us.txt </div>
+                <p class="text-p-up"></p>
                 <p class="lng-about_us_desc"></p>
+                <p class="text-p-down"></p>
             </div>
         </div>
         <div class="projects" id="projects">
@@ -113,10 +115,10 @@
         <div class="contacts" id="contacts">
             <div class="terminal">
                 <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ contacts.txt </div>
-                <p class="text-p">email:<a href="mailto:reverseent@proton.me">reverseent@proton.me</a></p>
+                <p class="text-p-up">email:<a href="mailto:reverseent@proton.me">reverseent@proton.me</a></p>
                 <p class="text-p">VK:<a href="https://vk.com/reverseentofficial">@reverseentofficial</a></p>
                 <p class="text-p">Twitter:<a href="https://twitter.com/reverseentoffi">@reverseentoffi</a></p>
-                <p class="text-p">YouTube:<a href="https://www.youtube.com/@reversegamestudio">@reversegamestudio</a></p>
+                <p class="text-p-down">YouTube:<a href="https://www.youtube.com/@reversegamestudio">@reversegamestudio</a></p>
             </div>
         </div>
         <div class="website-info">
@@ -130,10 +132,10 @@
 </body>
 <footer>
     <div class="website_info">
-        <p class="text-p">
+        <p class="text-p-up">
             Site info:
         </p>
-        <p class="text-p" id="version_body_author">
+        <p class="text-p-down" id="version_body_author">
             <script>
                 getWebSiteInfo()
             </script>
