--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a>
                         <img class="listpic" src="src/img/Logo/3_ v2.png"/>
                         <div class="listinfo">
-                            <div class="listname">Vanguard Engine | Engine |</div>
+                            <div class="listname">Vanguard | Engine |</div>
                             <div class="lng-ve"></div>
                         </div>
                         <div class="actbtns">
@@ -81,7 +81,7 @@
                         <img class="listpic" src="https://avatars.githubusercontent.com/u/98812457?v=4"/>
                         <div class="listinfo">
                             <div class="listname">geniy</div>
-                            <div class="listdesc">@Kira_is_god | TG</div><div class="lng-teamdesc-geniy"></div>
+                            <div class="lng-teamdesc-geniy"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/Kira_is_god'">arrow_forward_ios</div>
@@ -91,22 +91,22 @@
                         <img class="listpic" src="https://avatars.githubusercontent.com/u/133568586?v=4"/>
                         <div class="listinfo">
                             <div class="listname">steven56</div>
-                            <div class="listdesc">@steven56 | VK</div><div class="lng-teamdesc-steven56"></div>
+                            <div class="lng-teamdesc-steven56"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://vk.com/steven56'">arrow_forward_ios</div>
                         </div>
                     </a>
-                    <a>
+                    <!-- <a>
                         <img class="listpic" src="https://avatars.githubusercontent.com/u/141333181?v=4"/>
                         <div class="listinfo">
                             <div class="listname">bebreef</div>
-                            <div class="listdesc">@bebreef | TG & VK</div><div class="lng-teamdesc-bebreef"></div>
+                            <div class="lng-teamdesc-bebreef"></div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/bebreef'">arrow_forward_ios</div>
                         </div>
-                    </a>
+                    </a> -->
                 </div>
             </div>
         </div>
@@ -118,8 +118,6 @@
                 <p class="text-p">Twitter:<a href="https://twitter.com/reverseentoffi">@reverseentoffi</a></p>
                 <p class="text-p-down">YouTube:<a href="https://www.youtube.com/@reversegamestudio">@reversegamestudio</a></p>
             </div>
-        </div>
-        <div class="website-info">
         </div>
     </div>
     <!-- scripts -->
