--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
                     <a>
                         <img class="listpic" src="src/img/Logo/3_ v2.png"/>
                         <div class="listinfo">
-                            <div class="listname">??? | Game |</div>
-                            <div class="lng-shangii"></div>
+                            <div class="listname">The Theater | Game |</div>
+                            <div class="lng-theater"></div>
                         </div>
                         <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://github.com/bublickkk/StormImg/releases/download/stormapp/Storm.zip'">arrow_forward_ios</div>
+                            <img src="src/img/Logo/badge.svg" width="180px" alt="">
+                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://reverseeentertainment.itch.io/the-theater'">arrow_forward_ios</div>
                         </div>
                     </a>
                     <a>
@@ -57,7 +58,7 @@
                             <div class="lng-ve"></div>
                         </div>
                         <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://github.com/bublickkk/StormImg/releases/download/stormapp/Storm.zip'">arrow_forward_ios</div>
+                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://'">arrow_forward_ios</div>
                         </div>
                     </a>
                 </div>
