--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
                 <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ projects.txt </div>
                 <div class="list">
                     <a>
-                        <img class="listpic" src="src/img/Logo/3_ v2.png"/>
+                        <img class="listpic" src="src/img/Logo/TheTheaterCover.png"/>
                         <div class="listinfo">
                             <div class="listname">The Theater | Game |</div>
                             <div class="lng-theater"></div>
                         </div>
                         <div class="actbtns">
-                            <img src="src/img/Logo/badge.svg" width="180px" alt="">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://reverseeentertainment.itch.io/the-theater'">arrow_forward_ios</div>
                         </div>
                     </a>
