--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a>
                         <img class="listpic" src="src/img/Logo/TheTheaterCover.png"/>
                         <div class="listinfo">
-                            <div class="listname">The Theater | Game |</div>
+                            <div class="listname">🎭 | Game |</div>
                             <div class="lng-theater"></div>
                         </div>
                         <div class="actbtns">
