--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a>
                         <img class="listpic" src="src/img/Logo/TheTheaterCover.png"/>
                         <div class="listinfo">
-                            <div class="listname">🎭 | Game |</div>
+                            <div class="listname">🎭 The Theater | Game | Demo coming soon |</div>
                             <div class="lng-theater"></div>
                         </div>
                         <div class="actbtns">
@@ -85,16 +85,6 @@
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/Kira_is_god'">arrow_forward_ios</div>
-                        </div>
-                    </a>
-                    <a>
-                        <img class="listpic" src="https://avatars.githubusercontent.com/u/133568586?v=4"/>
-                        <div class="listinfo">
-                            <div class="listname">steven56</div>
-                            <div class="lng-teamdesc-steven56"></div>
-                        </div>
-                        <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://vk.com/steven56'">arrow_forward_ios</div>
                         </div>
                     </a>
                     <!-- <a>
