--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <p class="text-p-up">email:<a href="mailto:reverseent@proton.me">reverseent@proton.me</a></p>
                 <p class="text-p">VK:<a href="https://vk.com/reverseentofficial">@reverseentofficial</a></p>
                 <p class="text-p">X (Twitter):<a href="https://twitter.com/reverseentoffi">@reverseentoffi</a></p>
-                <p class="text-p-down">YouTube:<a href="https://www.youtube.com/@reversegamestudio">@reversegamestudio</a></p>
+                <p class="text-p-down">YouTube:<a href="https://www.youtube.com/@ReverseEntertainment_">@reversegamestudio</a></p>
             </div>
         </div>
     </div>
