--- a/index.html
+++ b/index.html
@@ -41,23 +41,13 @@
                 <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ projects.txt </div>
                 <div class="list">
                     <a>
-                        <img class="listpic" src="src/img/Logo/TheTheaterCover.png"/>
+                        <img class="listpic" src="src/img/Logo/3_ v2.png"/>
                         <div class="listinfo">
-                            <div class="listname">🎭 The Theater | Game | Demo coming soon |</div>
-                            <div class="lng-theater"></div>
+                            <div class="listname">...</div>
+                            <div class="lng-theater">...</div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://reverseeentertainment.itch.io/the-theater'">arrow_forward_ios</div>
-                        </div>
-                    </a>
-                    <a>
-                        <img class="listpic" src="src/img/Logo/3_ v2.png"/>
-                        <div class="listinfo">
-                            <div class="listname">Vanguard | Engine |</div>
-                            <div class="lng-ve"></div>
-                        </div>
-                        <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://'">arrow_forward_ios</div>
                         </div>
                     </a>
                 </div>
@@ -68,35 +58,15 @@
                 <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ team.txt </div>
                 <div class="list">
                     <a>
-                        <img class="listpic" src="https://avatars.githubusercontent.com/u/72266338?v=4"/>
+                        <img class="listpic" src="src/img/Logo/3_ v2.png"/>
                         <div class="listinfo">
-                            <div class="listname">bublickk</div>
-                            <div class="listdesc">@CherryMerryy | TG</div><div class="lng-teamdesc-bblckk"></div>
+                            <div class="listname">...</div>
+                            <div class="lng-theater">...</div>
                         </div>
                         <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/CherryMerryy'">arrow_forward_ios</div>
+                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://reverseeentertainment.itch.io/the-theater'">arrow_forward_ios</div>
                         </div>
                     </a>
-                    <a>
-                        <img class="listpic" src="https://avatars.githubusercontent.com/u/98812457?v=4"/>
-                        <div class="listinfo">
-                            <div class="listname">geniy</div>
-                            <div class="lng-teamdesc-geniy"></div>
-                        </div>
-                        <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/Kira_is_god'">arrow_forward_ios</div>
-                        </div>
-                    </a>
-                    <!-- <a>
-                        <img class="listpic" src="https://avatars.githubusercontent.com/u/141333181?v=4"/>
-                        <div class="listinfo">
-                            <div class="listname">bebreef</div>
-                            <div class="lng-teamdesc-bebreef"></div>
-                        </div>
-                        <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://t.me/bebreef'">arrow_forward_ios</div>
-                        </div>
-                    </a> -->
                 </div>
             </div>
         </div>
