--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
             <select class="change-lang">
                 <option value="en" selected>🇺🇸</option>
                 <option value="ru">🇷🇺</option>
-                <option value="ua">🇺🇦</option>
-                <option value="cz">🇨🇿</option>
                 <option value="by">🇧🇾</option>
             </select>
         </div>
@@ -39,13 +37,13 @@
                 <div class="terminal-text"> <span style="color: rgb(128, 128, 128)">reverse@ubuntu</span>:<span style="color: cornflowerblue">~</span>$ projects.txt </div>
                 <div class="list">
                     <a>
-                        <img class="listpic" src="src/img/Logo/3_ v2.png"/>
+                        <img class="listpic" src="src/img/Logo/Nifest.png"/>
                         <div class="listinfo">
                             <div class="listname">...</div>
-                            <div class="lng-theater">...</div>
+                            <div class="lng-nifest">...</div>
                         </div>
                         <div class="actbtns">
-                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://reverseeentertainment.itch.io/the-theater'">arrow_forward_ios</div>
+                            <div class="listbtn material-icons" href="javascript://" onclick="location.href='Nifest/index.html'">arrow_forward_ios</div>
                         </div>
                     </a>
                 </div>
@@ -58,8 +56,8 @@
                     <a>
                         <img class="listpic" src="src/img/Logo/3_ v2.png"/>
                         <div class="listinfo">
-                            <div class="listname">...</div>
-                            <div class="lng-theater">...</div>
+                            <div class="listname">cherry merry</div>
+                            <div class="lng-teamdesc-cherrymerry">...</div>
                         </div>
                         <div class="actbtns">
                             <div class="listbtn material-icons" href="javascript://" onclick="location.href='https://reverseeentertainment.itch.io/the-theater'">arrow_forward_ios</div>
